# text-linker

./: README.md  docker-compose.yml  mprocs.yaml
.github/workflows/: backend.yml  frontend.yml
apps/backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  flake.nix  main.py  prelinker.py  pyproject.toml  tokenizer.py
apps/backend/lib/: prelinker.py  resourcer.py  tokenizer.py
apps/frontend/: .env.example  .gitignore  Dockerfile  README.md  flake.nix  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json  tsconfig.node.json
apps/frontend/src/: App.css  App.jsx  App.tsx  index.tsx  types.ts
apps/frontend/src/components/: InputActions.tsx  NavigationLinks.tsx  ThemeSwitcher.tsx  TokenPills.tsx  Wizard.css  Wizard.jsx  Wizard.tsx
apps/frontend/src/components/steps/: Conllu.tsx  ExportTTL.jsx  ExportTTL.tsx  InputActions.tsx  InputConllu.jsx  InputConllu.tsx  InputLinking.jsx  InputLinking.tsx  InputText.jsx  InputText.tsx  Linked.tsx  Origin.tsx  Step.css  Turtle.tsx
apps/frontend/src/components/steps/Linked/: AddSuggestionDialog.tsx  DetailsModal.tsx  InfoModal.tsx  LinkedEntityCard.tsx  LinkingDetails.tsx  LinkingEditor.tsx  ProgressIndicator.tsx  SentenceDetails.tsx  SentencePills.tsx  StereoButtons.tsx  SuggestionCard.tsx  TokenDetails.tsx  TokenEditModal.tsx  TokenInspector.tsx  TokenPill.tsx
apps/frontend/src/themes/: darkTheme.ts  index.ts  lightTheme.ts
apps/frontend/src/utils/: conllu.test.ts  conllu.ts  liita.ts  sparql.ts  trivial.ts
