[project]
name = "liita-textlinker-backend"
version = "0.1.0"
requires-python = ">=3.13,<3.14" # NOTE: we pin to avoid 3.14 since there are no wheels for torch yet
dependencies = [
  "fastapi>=0.104.0",
  "pydantic>=2.5.0",
  "pymysql>=1.1.1",
  "sqlalchemy>=2.0.41",
  "slowapi>=0.1.9",
  "stanza>=1.10.1",
  "uvicorn[standard]>=0.24.0",
  "torch==2.7.1; sys_platform == 'darwin'",
  "torch==2.7.1+cpu; sys_platform == 'linux'",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'", # Paolo's M1
  "sys_platform == 'linux' and platform_machine == 'aarch64'", # GitHub CI
  "sys_platform == 'linux' and platform_machine == 'x86_64'", # Production
]

